# epik8s-softioc-mng

./: .gitignore  Dockerfile  HOWTO.md  INSTALL.md  MANUAL.md  QUICKSTART.md  README.md  generate_ioc_manager_opi.py  iocmng_task.py  main.py  plugins  pyproject.toml  requirements.txt  task_base.py  test.bob
.github/workflows/: release.yml
examples/: example_job.py  example_job_config.yaml  example_task.py  example_task_config.yaml  plugins.yaml  standalone_ioc.py
schemas/: iocmng-config.schema.json  iocmng-plugins.schema.json
src/iocmng/: __init__.py  declarative.py  runner.py
src/iocmng/api/: __init__.py  app.py  models.py  routes.py
src/iocmng/base/: __init__.py  job.py  task.py
src/iocmng/core/: __init__.py  channelfinder.py  controller.py  functions.py  loader.py  plugin_spec.py  pv_client.py  safe_eval.py  validator.py
src/iocmng/ophyd/: __init__.py  factory.py
tests/: test_api.py  test_base.py  test_controller_autostart.py  test_functions.py  test_links.py  test_loader.py  test_pv_client.py  test_runner.py  test_safe_eval.py  test_validator.py
